# flask-demo

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
flask_demo/: __main__.py  constants.py  handler.py  main.py  utils.py
flask_demo/site/: __init__.py  auth.py  views.py
flask_demo/site/templates/: base.html  home.html  login.html  signup.html
instance/: user-login-database.db
