[tool.poetry]
name = "flask-demo"
version = "0.1.0"
description = "flask-demo is a Kuzie Chambers personal project"
authors = []

[tool.poetry.dependencies]
python = "~3.11"
selenium = "*"
requests = "*"
ruff = "^0.1.14"
flask = "^3.0.1"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pre-commit = "*"
callee = "*"
pylint = "*"
mypy = "*"
flake8 = "*"

[tool.poetry.scripts]
run = "flask_demo.handler:handler"

[tool.black]
py311 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"
multi_line_output = 3
known_third_party = []

# Change pylint rule settings
[tool.pylint.design]

# Maximum number of locals for function / method body
max-locals=20
max-attributes=15

[tool.pylint.messages_control]
disable = [
    "C0114", # Module docstrings. Use best judgement
    "C0115", # Class docstrings. Use best judgement
    "C0116", # Function docstrings. Use best judgement. Use self-documenting identifiers
    "C0326",
    "W0511", # disable TO-DO warning
]

[tool.pylint.master]
load-plugins="pylint.extensions.docparams"

[tool.pylint.format]
max-line-length = "88"
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$|^\\s*(\\w*\\s*=\\s*)?(\"|\\').*(\"|\\'),?\\s*$"

[tool.pylint.logging]
disable="logging-fstring-interpolation"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# mypy global options:
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = "/__main__.py$"